--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-logging.level.org.springframework.web.servlet.DispatcherServlet=debug
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 logging.level.ru.yandex.practicum=debug
 server.error.include-message=always
